AI functionaliteiten voor transactie filtering

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ SUPABASE_KEY=your-anon-key
 # Application Settings
 APP_NAME=FinTrackable
 DEFAULT_INVESTMENT_GOAL=20
+
+# AI Configuration (Gemini)
+GEMINI_API_KEY=your-api-key-here
+
